{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 231,
  "lineage": "ed8d8def-ba33-6d8a-66e7-efb35465af5b",
  "resources": [
    {
      "module": "module.awx_controller",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "target_group_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:targetgroup/sw-tf-tg-awx/2c539590a6ee9b06-20221121233327186800000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:targetgroup/sw-tf-tg-awx/2c539590a6ee9b06",
            "target_id": "i-0994d2e9189fd6ded"
          },
          "dependencies": [
            "module.awx_controller.aws_instance.awx_controller",
            "module.sg.aws_security_group.default_sg",
            "module.vpc.aws_alb_target_group.target_group_awx",
            "module.vpc.aws_subnet.private_sn_a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.awx_controller",
      "mode": "managed",
      "type": "aws_instance",
      "name": "awx_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e2a570cb404b37e",
            "arn": "arn:aws:ec2:ap-northeast-2:644631683002:instance/i-0994d2e9189fd6ded",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0994d2e9189fd6ded",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07672be4028ba0fee",
            "private_dns": "ip-10-0-30-21.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.30.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0057995dc54589873",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0152a6ae05eadd643",
            "tags": {
              "Name": "sw-tf-controller"
            },
            "tags_all": {
              "Name": "sw-tf-controller"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ac13d2ebbfbe827"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.default_sg",
            "module.vpc.aws_subnet.private_sn_a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.awx_nodes",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "target_group_attach_grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:targetgroup/sw-tf-tg-grafana/e9fe34532ef5cfcc-20221122062717092600000001",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:targetgroup/sw-tf-tg-grafana/e9fe34532ef5cfcc",
            "target_id": "i-02af102ed262326dd"
          },
          "dependencies": [
            "module.awx_nodes.aws_instance.grafana",
            "module.sg.aws_security_group.default_sg",
            "module.vpc.aws_alb_target_group.target_group_grafana",
            "module.vpc.aws_subnet.private_sn_a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.awx_nodes",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "target_group_attach_vnc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:targetgroup/sw-tf-tg-vnc/c9d6d3b37e76d89c-20221121233328538300000009",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:targetgroup/sw-tf-tg-vnc/c9d6d3b37e76d89c",
            "target_id": "i-0ca53ba8ce1c0eaaa"
          },
          "dependencies": [
            "module.awx_nodes.aws_instance.vncserver",
            "module.sg.aws_security_group.default_sg",
            "module.vpc.aws_alb_target_group.target_group_vnc",
            "module.vpc.aws_subnet.private_sn_a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.awx_nodes",
      "mode": "managed",
      "type": "aws_instance",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e2a570cb404b37e",
            "arn": "arn:aws:ec2:ap-northeast-2:644631683002:instance/i-02af102ed262326dd",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02af102ed262326dd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05ec8105d789eef86",
            "private_dns": "ip-10-0-30-26.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.30.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-017005ca94e6e37fc",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0152a6ae05eadd643",
            "tags": {
              "Name": "sw-tf-grafana"
            },
            "tags_all": {
              "Name": "sw-tf-grafana"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ac13d2ebbfbe827"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.default_sg",
            "module.vpc.aws_subnet.private_sn_a"
          ]
        }
      ]
    },
    {
      "module": "module.awx_nodes",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ldapserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e2a570cb404b37e",
            "arn": "arn:aws:ec2:ap-northeast-2:644631683002:instance/i-02e89456dfda12d57",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e89456dfda12d57",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0480755aeab34d1a3",
            "private_dns": "ip-10-0-30-22.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.30.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d75f8b0bb321a52d",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0152a6ae05eadd643",
            "tags": {
              "Name": "sw-tf-ldapserver"
            },
            "tags_all": {
              "Name": "sw-tf-ldapserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ac13d2ebbfbe827"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.default_sg",
            "module.vpc.aws_subnet.private_sn_a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.awx_nodes",
      "mode": "managed",
      "type": "aws_instance",
      "name": "lsfnode01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e2a570cb404b37e",
            "arn": "arn:aws:ec2:ap-northeast-2:644631683002:instance/i-0035432a50b9d8737",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0035432a50b9d8737",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05c7493d3b3db72f5",
            "private_dns": "ip-10-0-30-25.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.30.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f37fe3b39e766a16",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0152a6ae05eadd643",
            "tags": {
              "Name": "sw-tf-lsfnode01"
            },
            "tags_all": {
              "Name": "sw-tf-lsfnode01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ac13d2ebbfbe827"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.default_sg",
            "module.vpc.aws_subnet.private_sn_a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.awx_nodes",
      "mode": "managed",
      "type": "aws_instance",
      "name": "lsfserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e2a570cb404b37e",
            "arn": "arn:aws:ec2:ap-northeast-2:644631683002:instance/i-0982eea58c8cd8b4d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0982eea58c8cd8b4d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e8db387dbac789b4",
            "private_dns": "ip-10-0-30-24.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.30.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04a75ab45bc58404b",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0152a6ae05eadd643",
            "tags": {
              "Name": "sw-tf-lsfserver"
            },
            "tags_all": {
              "Name": "sw-tf-lsfserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ac13d2ebbfbe827"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.default_sg",
            "module.vpc.aws_subnet.private_sn_a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.awx_nodes",
      "mode": "managed",
      "type": "aws_instance",
      "name": "vncserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e2a570cb404b37e",
            "arn": "arn:aws:ec2:ap-northeast-2:644631683002:instance/i-0ca53ba8ce1c0eaaa",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca53ba8ce1c0eaaa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-003428cec06a96110",
            "private_dns": "ip-10-0-30-23.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.30.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c1025a7c6bf10c1a",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0152a6ae05eadd643",
            "tags": {
              "Name": "sw-tf-vncserver"
            },
            "tags_all": {
              "Name": "sw-tf-vncserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ac13d2ebbfbe827"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.default_sg",
            "module.vpc.aws_subnet.private_sn_a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f767f04e7e879711",
            "association_id": "eipassoc-0a8ce8b2988afb64c",
            "domain": "vpc",
            "id": "eipalloc-0f767f04e7e879711",
            "instance": "i-061c99011b982a9dc",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0ed4128b28ac37f29",
            "private_dns": "ip-10-0-10-204.ap-northeast-2.compute.internal",
            "private_ip": "10.0.10.204",
            "public_dns": "ec2-3-39-156-208.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.156.208",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.bastion.aws_instance.bastion",
            "module.sg.aws_security_group.default_sg",
            "module.vpc.aws_subnet.public_sn_a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e2a570cb404b37e",
            "arn": "arn:aws:ec2:ap-northeast-2:644631683002:instance/i-061c99011b982a9dc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-061c99011b982a9dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ed4128b28ac37f29",
            "private_dns": "ip-10-0-10-204.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.204",
            "public_ip": "3.39.156.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03acc24ac3a8bc393",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05618a6369ae5971c",
            "tags": {
              "Name": "sw-tf-bastion"
            },
            "tags_all": {
              "Name": "sw-tf-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ac13d2ebbfbe827"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.default_sg",
            "module.vpc.aws_subnet.public_sn_a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:644631683002:security-group/sg-02ac13d2ebbfbe827",
            "description": "Default SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ac13d2ebbfbe827",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Default_sg",
            "name_prefix": "",
            "owner_id": "644631683002",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sw-tf-sg"
            },
            "tags_all": {
              "Name": "sw-tf-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e13535f2bcf88f1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:loadbalancer/app/sw-tf-alb/0dfa3c4d31a667c9",
            "arn_suffix": "app/sw-tf-alb/0dfa3c4d31a667c9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "sw-tf-alb-1817771443.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:loadbalancer/app/sw-tf-alb/0dfa3c4d31a667c9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sw-tf-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02ac13d2ebbfbe827"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05618a6369ae5971c"
              },
              {
                "subnet_id": "subnet-0e4002fd426d4fd6b"
              }
            ],
            "subnets": [
              "subnet-05618a6369ae5971c",
              "subnet-0e4002fd426d4fd6b"
            ],
            "tags": {
              "Name": "sw-tf-alb"
            },
            "tags_all": {
              "Name": "sw-tf-alb"
            },
            "vpc_id": "vpc-0e13535f2bcf88f1a",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.sg.aws_security_group.default_sg",
            "module.vpc.aws_subnet.public_sn_a",
            "module.vpc.aws_subnet.public_sn_b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_awx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:listener/app/sw-tf-alb/0dfa3c4d31a667c9/16c017270c6f40cb",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:644631683002:certificate/bdd4190d-80d2-4b2c-845d-1721d87078be",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:targetgroup/sw-tf-tg-awx/2c539590a6ee9b06",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:listener/app/sw-tf-alb/0dfa3c4d31a667c9/16c017270c6f40cb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:loadbalancer/app/sw-tf-alb/0dfa3c4d31a667c9",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.default_sg",
            "module.vpc.aws_alb.alb",
            "module.vpc.aws_alb_target_group.target_group_awx",
            "module.vpc.aws_subnet.public_sn_a",
            "module.vpc.aws_subnet.public_sn_b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_acm_certificate.aws_cert"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:listener/app/sw-tf-alb/0dfa3c4d31a667c9/a1e3cf71247e3fd7",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:644631683002:certificate/bdd4190d-80d2-4b2c-845d-1721d87078be",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:targetgroup/sw-tf-tg-grafana/e9fe34532ef5cfcc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:listener/app/sw-tf-alb/0dfa3c4d31a667c9/a1e3cf71247e3fd7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:loadbalancer/app/sw-tf-alb/0dfa3c4d31a667c9",
            "port": 8888,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_alb.alb",
            "module.vpc.aws_alb_target_group.target_group_grafana",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_acm_certificate.aws_cert"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_vnc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:listener/app/sw-tf-alb/0dfa3c4d31a667c9/9816db26a567155e",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:644631683002:certificate/bdd4190d-80d2-4b2c-845d-1721d87078be",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:targetgroup/sw-tf-tg-vnc/c9d6d3b37e76d89c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:listener/app/sw-tf-alb/0dfa3c4d31a667c9/9816db26a567155e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:loadbalancer/app/sw-tf-alb/0dfa3c4d31a667c9",
            "port": 8443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.default_sg",
            "module.vpc.aws_alb.alb",
            "module.vpc.aws_alb_target_group.target_group_vnc",
            "module.vpc.aws_subnet.public_sn_a",
            "module.vpc.aws_subnet.public_sn_b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_acm_certificate.aws_cert"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group_awx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:targetgroup/sw-tf-tg-awx/2c539590a6ee9b06",
            "arn_suffix": "targetgroup/sw-tf-tg-awx/2c539590a6ee9b06",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:targetgroup/sw-tf-tg-awx/2c539590a6ee9b06",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "sw-tf-tg-awx",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e13535f2bcf88f1a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group_grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:targetgroup/sw-tf-tg-grafana/e9fe34532ef5cfcc",
            "arn_suffix": "targetgroup/sw-tf-tg-grafana/e9fe34532ef5cfcc",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:targetgroup/sw-tf-tg-grafana/e9fe34532ef5cfcc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "sw-tf-tg-grafana",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e13535f2bcf88f1a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group_vnc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:targetgroup/sw-tf-tg-vnc/c9d6d3b37e76d89c",
            "arn_suffix": "targetgroup/sw-tf-tg-vnc/c9d6d3b37e76d89c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:644631683002:targetgroup/sw-tf-tg-vnc/c9d6d3b37e76d89c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "sw-tf-tg-vnc",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e13535f2bcf88f1a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:644631683002:route-table/rtb-02927f579ea9a5b34",
            "default_route_table_id": "rtb-02927f579ea9a5b34",
            "id": "rtb-02927f579ea9a5b34",
            "owner_id": "644631683002",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08fcd899d28732bcc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sw-tf-pb-rt"
            },
            "tags_all": {
              "Name": "sw-tf-pb-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e13535f2bcf88f1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c5a69038b4fde8d",
            "association_id": "eipassoc-08c314efb08e4bbb1",
            "domain": "vpc",
            "id": "eipalloc-01c5a69038b4fde8d",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-09e090d0e9932e90f",
            "private_dns": "ip-10-0-10-219.ap-northeast-2.compute.internal",
            "private_ip": "10.0.10.219",
            "public_dns": "ec2-15-165-169-85.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.169.85",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:644631683002:internet-gateway/igw-08fcd899d28732bcc",
            "id": "igw-08fcd899d28732bcc",
            "owner_id": "644631683002",
            "tags": {
              "Name": "sw-tf-igw"
            },
            "tags_all": {
              "Name": "sw-tf-igw"
            },
            "vpc_id": "vpc-0e13535f2bcf88f1a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c5a69038b4fde8d",
            "connectivity_type": "public",
            "id": "nat-0717ce3837a9e3019",
            "network_interface_id": "eni-09e090d0e9932e90f",
            "private_ip": "10.0.10.219",
            "public_ip": "15.165.169.85",
            "subnet_id": "subnet-05618a6369ae5971c",
            "tags": {
              "Name": "sw-tf-nat-gw"
            },
            "tags_all": {
              "Name": "sw-tf-nat-gw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public_sn_a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:644631683002:route-table/rtb-0d26416e66c7b5e37",
            "id": "rtb-0d26416e66c7b5e37",
            "owner_id": "644631683002",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0717ce3837a9e3019",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sw-tf-pv-rt"
            },
            "tags_all": {
              "Name": "sw-tf-pv-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e13535f2bcf88f1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_pb_sn_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027629b9ed5a6f633",
            "route_table_id": "rtb-02927f579ea9a5b34",
            "subnet_id": "subnet-05618a6369ae5971c"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.public_route_table",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_sn_a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_pb_sn_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031cece366bd7d449",
            "route_table_id": "rtb-02927f579ea9a5b34",
            "subnet_id": "subnet-0e4002fd426d4fd6b"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.public_route_table",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_sn_b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_pv_sn_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b51a4f8ec24d6f83",
            "route_table_id": "rtb-0d26416e66c7b5e37",
            "subnet_id": "subnet-0152a6ae05eadd643"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_sn_a",
            "module.vpc.aws_subnet.public_sn_a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sn_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:644631683002:subnet/subnet-0152a6ae05eadd643",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0152a6ae05eadd643",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "644631683002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sw-tf-pv-sn"
            },
            "tags_all": {
              "Name": "sw-tf-pv-sn"
            },
            "vpc_id": "vpc-0e13535f2bcf88f1a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sn_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:644631683002:subnet/subnet-05618a6369ae5971c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05618a6369ae5971c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "644631683002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sw-tf-pb-sn"
            },
            "tags_all": {
              "Name": "sw-tf-pb-sn"
            },
            "vpc_id": "vpc-0e13535f2bcf88f1a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sn_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:644631683002:subnet/subnet-0e4002fd426d4fd6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4002fd426d4fd6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "644631683002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sw-tf-pb2-sn"
            },
            "tags_all": {
              "Name": "sw-tf-pb2-sn"
            },
            "vpc_id": "vpc-0e13535f2bcf88f1a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:644631683002:vpc/vpc-0e13535f2bcf88f1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09867dc7cac670557",
            "default_route_table_id": "rtb-02927f579ea9a5b34",
            "default_security_group_id": "sg-00a62d2df50aa226d",
            "dhcp_options_id": "dopt-0a1974f9d8309d995",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e13535f2bcf88f1a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02927f579ea9a5b34",
            "owner_id": "644631683002",
            "tags": {
              "Name": "sw-tf-vpc"
            },
            "tags_all": {
              "Name": "sw-tf-vpc"
            }
          }
        }
      ]
    }
  ]
}